# joyride-rust

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  Makefile.toml  README.md  index.html
.cargo/: config.toml
assets/: road_segs.ron
dev_assets/: large_nums.xcf  road_objs.xcf  small_nums.xcf  small_texts.xcf
src/: debug.rs  fixed_framerate.rs  game.rs  joyride.rs  main.rs  player.rs  racer.rs  rival.rs  road.rs  road_object.rs  skybox.rs  text.rs  util.rs
