[package]
name = "joyride_rust"
version = "0.1.0"
authors = ["Sean Oxley <13091705+OxleyS@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
]

native = [
    "bevy/bevy_wgpu"
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "883abbb27a9fbc86df664f2e49fc600306327d44", default-features = false }
bevy = { version = "0.5.0", default-features = false }
easy-cast = "0.4.4"
lebe = "0.5.1"
bevy_webgl2 = { version = "0.5.0", optional = true }
winit = "0.24.0"
