[package]
name = "joyride_rust"
version = "0.1.0"
publish = false
authors = ["Sean Oxley <13091705+OxleyS@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/bevy_wgpu"
]

web = [
    "bevy_webgl2",
]

dev = [
    "native",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
easy-cast = "0.4.4"
lebe = "0.5.1"
rand = "0.8"
bevy_webgl2 = { version = "0.5.0", optional = true }
bevy_kira_audio = { version = "0.5.0" }
winit = "0.24.0"
